gccida/g0/emit_push_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3740:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3759:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3768:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code code; // [rsp+54h] [rbp-8Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3780:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+BCh] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3830:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)size + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3893:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pred = insn_data_0[code].operand->predicate; 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3896:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
preda = insn_data_0[code].operand[1].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3899:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predb = insn_data_0[code].operand[3].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3904:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predc = insn_data_0[code].operand[2].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3907:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[code].genfun( target, xinner, op2, opalign); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3907:31: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[code].genfun( target, xinner, op2, opalign); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:3928:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:4007:58: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)xa == 61 && xa->fld[0].rtint <= 0x34u && mode_class_0[*( ( unsigned __int8 *)xa + 2)] != MODE_INT ) 
                                                         ^~~~~~~~~~~~
                                                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:4016:18: error: invalid suffix 'xmode' on integer constant
v37 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:4017:31: error: invalid suffix 'orce' on integer constant
v38 = operand_sub*(short *)0xforce( xa, i, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/expr.c:4017:7: error: use of undeclared identifier 'operand_sub'
v38 = operand_sub*(short *)0xforce( xa, i, mode); 
      ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_push_insn/src/obj/expr.o] Error 1
